# libhibr

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libhibr-wiki.ini  libhibr.ini  libhibr.pc.in  libhibr.spec.in  synclibs.ps1  synclibs.sh
.github/workflows/: build.yml  build_linux.yml  build_macos.yml  build_ossfuzz.yml  build_package.yml  build_windows.yml  coverage.yml
.travis/: before_install.sh  runtests.sh  script.sh
common/: config_winapi.h
documentation/: Windows Hibernation File (hiberfil.sys) format.asciidoc
dpkg/: changelog.in  control  copyright  copyright.in  rules
hibrtools/: Makefile.am  hibrinfo.c  hibrmount.c  hibroutput.c  hibroutput.h  hibrtools_getopt.c  hibrtools_getopt.h  hibrtools_i18n.h  hibrtools_libbfio.h  hibrtools_libcdata.h  hibrtools_libcerror.h  hibrtools_libclocale.h  hibrtools_libcnotify.h  hibrtools_libcpath.h  hibrtools_libcstring.h  hibrtools_libcsystem.h  hibrtools_libhibr.h  hibrtools_libuna.h  hibrtools_output.c  hibrtools_output.h  hibrtools_signal.c  hibrtools_signal.h  hibrtools_unused.h  info_handle.c  info_handle.h  mount_dokan.c  mount_dokan.h  mount_file_entry.c  mount_file_entry.h  mount_file_system.c  mount_file_system.h  mount_fuse.c  mount_fuse.h  mount_handle.c  mount_handle.h
include/: Makefile.am  libhibr.h.in
include/libhibr/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libhibr/: Makefile.am  hibr_compressed_page_data.h  hibr_compressed_page_map.h  hibr_file_header.h  hibr_memory_image_information.h  libhibr.c  libhibr.rc.in  libhibr_compressed_page_data.c  libhibr_compressed_page_data.h  libhibr_compressed_page_map.c  libhibr_compressed_page_map.h  libhibr_compression.c  libhibr_compression.h  libhibr_debug.c  libhibr_debug.h  libhibr_definitions.h.in  libhibr_error.c  libhibr_error.h  libhibr_extern.h  libhibr_file.c  libhibr_file.h  libhibr_i18n.c  libhibr_i18n.h  libhibr_io_handle.c  libhibr_io_handle.h  libhibr_libbfio.h  libhibr_libcdata.h  libhibr_libcerror.h  libhibr_libclocale.h  libhibr_libcnotify.h  libhibr_libcstring.h  libhibr_libfcache.h  libhibr_libfdata.h  libhibr_libfdatetime.h  libhibr_libfvalue.h  libhibr_libfwnt.h  libhibr_libuna.h  libhibr_notify.c  libhibr_notify.h  libhibr_support.c  (+3 more)
m4/: yaltools.m4
manuals/: Makefile.am  hibrinfo.1  hibrmount.1  libhibr.3
msvscpp/: Makefile.am  libhibr.sln
msvscpp/dokan/: dokan.vcproj
msvscpp/hibr_test_compressed_page_data/: hibr_test_compressed_page_data.vcproj
msvscpp/hibr_test_compressed_page_map/: hibr_test_compressed_page_map.vcproj
msvscpp/hibr_test_error/: hibr_test_error.vcproj
msvscpp/hibr_test_file/: hibr_test_file.vcproj
msvscpp/hibr_test_get_version/: hibr_test_get_version.vcproj
msvscpp/hibr_test_io_handle/: hibr_test_io_handle.vcproj
msvscpp/hibr_test_notify/: hibr_test_notify.vcproj
msvscpp/hibr_test_open_close/: hibr_test_open_close.vcproj
msvscpp/hibr_test_support/: hibr_test_support.vcproj
msvscpp/hibrinfo/: hibrinfo.vcproj
msvscpp/hibrmount/: hibrmount.vcproj
msvscpp/libbfio/: libbfio.vcproj
msvscpp/libcdata/: libcdata.vcproj
msvscpp/libcerror/: libcerror.vcproj
msvscpp/libcfile/: libcfile.vcproj
msvscpp/libclocale/: libclocale.vcproj
msvscpp/libcnotify/: libcnotify.vcproj
msvscpp/libcpath/: libcpath.vcproj
msvscpp/libcsplit/: libcsplit.vcproj
msvscpp/libcstring/: libcstring.vcproj
msvscpp/libcsystem/: libcsystem.vcproj
msvscpp/libcthreads/: libcthreads.vcproj
msvscpp/libfcache/: libfcache.vcproj
msvscpp/libfdata/: libfdata.vcproj
msvscpp/libfdatetime/: libfdatetime.vcproj
msvscpp/libfvalue/: libfvalue.vcproj
msvscpp/libfwnt/: libfwnt.vcproj
msvscpp/libhibr/: libhibr.vcproj
msvscpp/libuna/: libuna.vcproj
ossfuzz/: Makefile.am  file_fuzzer.cc  ossfuzz_libhibr.h
tests/: Makefile.am  hibr_test_compressed_page_data.c  hibr_test_compressed_page_map.c  hibr_test_error.c  hibr_test_file.c  hibr_test_functions.c  hibr_test_functions.h  hibr_test_get_version.c  hibr_test_getopt.c  hibr_test_getopt.h  hibr_test_io_handle.c  hibr_test_libbfio.h  hibr_test_libcerror.h  hibr_test_libclocale.h  hibr_test_libcnotify.h  hibr_test_libcstring.h  hibr_test_libcsystem.h  hibr_test_libhibr.h  hibr_test_libuna.h  hibr_test_macros.h  hibr_test_memory.c  hibr_test_memory.h  hibr_test_notify.c  hibr_test_open_close.c  hibr_test_support.c  hibr_test_unused.h  pkgbuild.sh  runtests.sh  syncsharedlibs.sh  test_api_functions.sh  test_api_types.ps1  test_api_types.sh  test_hibrinfo.ps1  test_hibrinfo.sh  test_library.at  test_library.ps1  test_library.sh  test_manpages.at  test_open_close.sh  test_tools.at  (+1 more)
