include_HEADERS = \
	libhibr.h

pkginclude_HEADERS = \
	libhibr/codepage.h \
	libhibr/definitions.h \
	libhibr/error.h \
	libhibr/extern.h \
	libhibr/features.h \
	libhibr/types.h

EXTRA_DIST = \
	libhibr.h.in \
	libhibr/definitions.h.in \
	libhibr/features.h.in \
	libhibr/types.h.in

DISTCLEANFILES = \
	libhibr.h \
	libhibr/definitions.h \
	libhibr/features.h \
	libhibr/types.h \
	Makefile \
	Makefile.in

