MSVSCPP_FILES = \
	dokan/dokan.vcproj \
	hibr_test_error/hibr_test_error.vcproj \
	hibr_test_get_version/hibr_test_get_version.vcproj \
	hibr_test_open_close/hibr_test_open_close.vcproj \
	hibrinfo/hibrinfo.vcproj \
	hibrmount/hibrmount.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcstring/libcstring.vcproj \
	libcsystem/libcsystem.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfwnt/libfwnt.vcproj \
	libhibr/libhibr.vcproj \
	libuna/libuna.vcproj \
	libhibr.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

