MSVSCPP_FILES = \
	dokan/dokan.vcproj \
	hibr_test_compressed_page_data/hibr_test_compressed_page_data.vcproj \
	hibr_test_compressed_page_map/hibr_test_compressed_page_map.vcproj \
	hibr_test_error/hibr_test_error.vcproj \
	hibr_test_file/hibr_test_file.vcproj \
	hibr_test_io_handle/hibr_test_io_handle.vcproj \
	hibr_test_notify/hibr_test_notify.vcproj \
	hibr_test_support/hibr_test_support.vcproj \
	hibrinfo/hibrinfo.vcproj \
	hibrmount/hibrmount.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfwnt/libfwnt.vcproj \
	libhibr/libhibr.vcproj \
	libuna/libuna.vcproj \
	libhibr.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

